--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,8 +20,7 @@
   bibtex_show={true},
   abbr={ArXiv},
   title={Eliminating Spurious Correlations from Pre-trained Models via Data Mixing},
-  abstract={Machine learning models pre-trained on large datasets have achieved remarkable convergence and robustness properties. However, these models often exploit spurious correlations between certain attributes and labels, 
-  are prevalent in the majority of examples within specific categories but are not predictive of these categories in general. The learned spurious correlations may persist even after fine-tuning on new data, which degrades models' performance on examples that do not exhibit the spurious correlation. In this work, we propose a simple and highly effective method to eliminate spurious correlations from pre-trained models. The key idea of our method is to leverage a small set of examples with spurious attributes, and balance the spurious attributes across all classes via data mixing. We theoretically confirm the effectiveness of our method, and empirically demonstrate its state-of-the-art performance on various vision and NLP tasks, including eliminating spurious correlations from pre-trained ResNet50 on Waterbirds and CelebA, adversarially pre-trained ResNet50 on ImageNet, and BERT pre-trained on CivilComments.},
+  abstract={Machine learning models pre-trained on large datasets have achieved remarkable convergence and robustness properties. However, these models often exploit spurious correlations between certain attributes and labels, which are prevalent in the majority of examples within specific categories but are not predictive of these categories in general. The learned spurious correlations may persist even after fine-tuning on new data, which degrades models' performance on examples that do not exhibit the spurious correlation. In this work, we propose a simple and highly effective method to eliminate spurious correlations from pre-trained models. The key idea of our method is to leverage a small set of examples with spurious attributes, and balance the spurious attributes across all classes via data mixing. We theoretically confirm the effectiveness of our method, and empirically demonstrate its state-of-the-art performance on various vision and NLP tasks, including eliminating spurious correlations from pre-trained ResNet50 on Waterbirds and CelebA, adversarially pre-trained ResNet50 on ImageNet, and BERT pre-trained on CivilComments.},
   author={Xue, Yihao and Payani, Ali and Yang, Yu and Mirzasoleiman, Baharan},
   journal={arXiv preprint arXiv:2305.14521},
   arxiv={2305.14521},
@@ -118,6 +117,7 @@
   website={https://baharanm.github.io/blog/2023/CC-FS/},
   pdf={xue23which.pdf},
   supp={xue23which_long.pdf},
+  award={Oral presentation (top 2%)}
 }
 
 @article{yang2023towards,
@@ -212,7 +212,8 @@
   pdf={yang22poisons.pdf},
   supp={yang22poisons_long.pdf},
   code={https://github.com/BigML-CS-UCLA/EPIC},
-  poison={true}
+  poison={true},
+  award={Oral presentation (top 2%)}
 }
 
 @article{pooladzandi2022adaptive,
@@ -435,7 +436,8 @@
   journal={Advances in Neural Information Processing Systems (NeurIPS)},
   volume={31},
   year={2018},
-  pdf={ghalebi18dynamic.pdf}
+  pdf={ghalebi18dynamic.pdf},
+  award={Spotlight presentation (top 3%)}
 }
 
 @article{mirzasoleiman2017deletion,
@@ -545,7 +547,8 @@
   volume={28},
   year={2015},
   pdf={mirzasoleiman15cover.pdf},
-  supp={mirzasoleiman15cover_long.pdf}
+  supp={mirzasoleiman15cover_long.pdf},
+  award={Spotlight presentation (top 4%)}
 }
 
 @article{badanidiyuru2014streaming,
@@ -652,7 +655,8 @@
   author={Shafiei, Hossein and Khonsari, Ahmad and Mirzasoleiman, Baharan and Ould-Khaoua, Mohammad},
   journal={IEEE International Conference on Communications (ICC)},
   year={2011},
-  pdf={shafiei11reuse.pdf}
+  pdf={shafiei11reuse.pdf},
+  award={Best paper award runner up}
 }
 
 @article{jafari2009utility,
