--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -128,6 +128,7 @@
   author={Yang, Yu and Kang, Hao and Mirzasoleiman, Baharan},
   journal={International Conference on Machine Learning (ICML)},
   year={2023},
+  website={https://baharanm.github.io/blog/2023/crest/},
   pdf={yang23sustainable.pdf},
   supp={yang23sustainable.pdf},
   efficient={true}
