--- a/_posts/2023-06-11-crest.md
+++ b/_posts/2023-06-11-crest.md
@@ -44,12 +44,12 @@ Because (mini-batch) SGD needs mini-batches with small bias and variance to conv
 <br>
 
 <h3>Introducing CREST: <ins>C</ins>o<ins>re</ins>sets for <ins>St</ins>ochastic Gradient Descent</h3>
-<h4>Modeling the non-convex loss as a <span style="color:#DF5279">piece-wise quadratic</span></h4>
+<h4>Modeling the non-convex loss as a <span class="emp">piece-wise quadratic</span></h4>
 1. Select one coreset at $w$
 2. Model a quadratic function with Taylor expansion of $$\mathcal{L}(w)$$
 3. Train on the selected subset as long as the quadratic function has a small approximation error
 
-<h4>Selecting <s>a single coreset</s> <span style="color:#DF5279">mini-batch coresets</span> from <span style="color:#DF5279">random subsets</span> of all data</h4>
+<h4>Selecting <s>a single coreset</s> <span class="emp">mini-batch coresets</span> from <span class="emp">random subsets</span> of all data</h4>
 <div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
         Instead of one coreset, we want to find multiple mini-batch coresets from larger random subsets to have smaller variance.
