--- a/_posts/2023-05-08-data-CL.md
+++ b/_posts/2023-05-08-data-CL.md
@@ -17,7 +17,7 @@ Previous work has studied data-efficiency for supervised learning and shown that
 
 <div class="row">
     <div class="col-sm mt-3 mt-md-0">
-        {% include figure.html path="assets/img/discard-pct.png" title="example image" class="img-fluid rounded z-depth-1" %}
+        {% include figure.html path="assets/img/blog/discard-pct.png" title="discard-pct" class="img-fluid rounded z-depth-1" %}
     </div>
 </div>
 
