--- a/_posts/2023-06-11-crest.md
+++ b/_posts/2023-06-11-crest.md
@@ -56,7 +56,7 @@ Because (mini-batch) SGD needs mini-batches with small bias and variance to conv
         Each of the mini-batch coresets is nearly unbiased as long as the quadratic approximation is still valid.
     </div>
     <div class="col-sm mt-3 mt-md-0">
-        {% include figure.html path="assets/img/multiple.gif" title="example image" class="img-fluid rounded z-depth-1" %}
+        {% include figure.html path="assets/img/blog/multiple.gif" title="multiple" class="img-fluid rounded z-depth-1" %}
     </div>
 </div>
 
@@ -75,7 +75,7 @@ training with stochastic gradient descent on mini-batch coresets found by CREST 
 <h4>CREST outperforms state-of-the-art coreset selection baselines</h4>
 <div class="row">
     <div class="col-sm mt-3 mt-md-0">
-        {% include figure.html path="assets/img/table.png" title="example image" class="img-fluid rounded z-depth-1" %}
+        {% include figure.html path="assets/img/blog/table.png" title="table" class="img-fluid rounded z-depth-1" %}
     </div>
 </div>
 <br />
@@ -83,7 +83,7 @@ training with stochastic gradient descent on mini-batch coresets found by CREST 
 <h4>CREST speedups training on image and language data</h4>
 <div class="row">
     <div class="col-sm mt-3 mt-md-0">
-        {% include figure.html path="assets/img/speedup.png" title="example image" class="img-fluid rounded z-depth-1" %}
+        {% include figure.html path="assets/img/blog/speedup.png" title="speedup" class="img-fluid rounded z-depth-1" %}
     </div>
 </div>
 <br />
@@ -93,7 +93,7 @@ training with stochastic gradient descent on mini-batch coresets found by CREST 
 <h4>Deep models needs data of increasing difficulty</h4>
 
 <div class="row justify-content-sm-center">
-    {% include figure.html path="assets/img/forgetting.png" title="example image" class="img-fluid rounded z-depth-1" %}
+    {% include figure.html path="assets/img/blog/forgetting.png" title="forgetting" class="img-fluid rounded z-depth-1" %}
 </div>
 
 <h4> BibTeX </h4>
