--- a/_posts/2023-06-08-CC-FS.md
+++ b/_posts/2023-06-08-CC-FS.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Which Features are Learned by Contrastive Learning? 
+title: Which Features are Learnt by Contrastive Learning? 
 date: 2023-06-08 15:53:00-0400
 description: On the Role of Simplicity Bias in Class Collapse and Feature Suppression
 categories: contrastive-learning simplicity-bias
@@ -12,7 +12,7 @@ Contrastive learning (CL) has emerged as a powerful technique for representation
 
 <div class="row">
     <div class="col-sm mt-3 mt-md-0">
-        {% include figure.html path="assets/img/example_cc_fs.png" title="example image" class="img-fluid rounded z-depth-1" %}
+        {% include figure.html path="assets/img/blog/example_cc_fs.png" title="example_cc_fs" class="img-fluid rounded z-depth-1" %}
     </div>
 </div>
 
@@ -26,12 +26,12 @@ Contrastive learning (CL) has emerged as a powerful technique for representation
 
 <div class="row">
     <div class="col-sm mt-3 mt-md-0">
-        {% include figure.html path="assets/img/not_all.png" title="example image" class="img-fluid rounded z-depth-1" %}
+        {% include figure.html path="assets/img/blog/not_all.png" title="not_all" class="img-fluid rounded z-depth-1" %}
     </div>
 </div>
 <div class="row">
     <div class="col-sm mt-3 mt-md-0">
-        {% include figure.html path="assets/img/fs.png" title="example image" class="img-fluid rounded z-depth-1" %}
+        {% include figure.html path="assets/img/blog/fs.png" title="feature suppression" class="img-fluid rounded z-depth-1" %}
     </div>
 </div>
 
@@ -39,7 +39,7 @@ Contrastive learning (CL) has emerged as a powerful technique for representation
 
 <div class="row">
     <div class="col-sm mt-3 mt-md-0">
-        {% include figure.html path="assets/img/cc.png" title="example image" class="img-fluid rounded z-depth-1" %}
+        {% include figure.html path="assets/img/blog/cc.png" title="class collapse" class="img-fluid rounded z-depth-1" %}
     </div>
 </div>
 
