--- a/_posts/2023-06-11-crest.md
+++ b/_posts/2023-06-11-crest.md
@@ -21,7 +21,7 @@ Read the full article here: [paper](../../../assets/pdf/yang23sustainable.pdf)
         <a href="../../../assets/pdf/mirzasoleiman20data.pdf">Recent research</a> has shown that for strongly convex models (linear and ridge regression, and regularized support vector machines), one <b>weighted subset (coreset)</b> is enough to (1) upper bound the gradient error during the entire training, and (2) guarantee convergence for (Incremental) Gradient Descent.
     </div>
     <div class="col-sm mt-3 mt-md-0">
-        {% include figure.html path="assets/img/efficient.png" title="example image" class="img-fluid rounded z-depth-1" %}
+        {% include figure.html path="assets/img/blog/efficient.png" title="efficient" class="img-fluid rounded z-depth-1" %}
     </div>
 </div>
 
