--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -143,7 +143,7 @@
   year={2023},
   website={https://baharanm.github.io/blog/2023/crest/},
   pdf={yang23sustainable.pdf},
-  supp={yang23sustainable.pdf},
+  supp={yang23sustainable_long.pdf},
   efficient={true}
 }
 
